--- a/To-do List/To-do List/Base.lproj/Main.storyboard
+++ b/To-do List/To-do List/Base.lproj/Main.storyboard
@@ -33,7 +33,11 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="5c4-XZ-sR4">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="qfC-SI-FcQ"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="qfC-SI-FcQ">
+                            <connections>
+                                <segue destination="6Zy-Uq-aEh" kind="presentation" modalPresentationStyle="overCurrentContext" modalTransitionStyle="flipHorizontal" id="xux-Uu-nOy"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="addButton" destination="qfC-SI-FcQ" id="fxx-1n-k5y"/>
@@ -43,6 +47,83 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1591" y="81"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="bga-om-jgO">
+            <objects>
+                <viewController id="6Zy-Uq-aEh" sceneMemberID="viewController">
+                    <view key="view" opaque="NO" contentMode="scaleToFill" id="WKn-GP-jg8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kip-om-2JE">
+                                <rect key="frame" x="-4" y="80" width="383" height="179.5"/>
+                                <subviews>
+                                    <stackView contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="VRO-MQ-T7S">
+                                        <rect key="frame" x="20" y="20" width="343" height="139.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter a task" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J73-0l-26x">
+                                                <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="21" id="vdG-F3-E2V"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pKi-1b-Oxz">
+                                                <rect key="frame" x="0.0" y="35.5" width="343" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="VE1-Rd-jyN"/>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qG0-le-40x">
+                                                <rect key="frame" x="0.0" y="80.5" width="343" height="0.0"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" id="shQ-I9-boo"/>
+                                                </constraints>
+                                            </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="95h-ob-j5A">
+                                                <rect key="frame" x="0.0" y="95.5" width="343" height="44"/>
+                                                <color key="backgroundColor" red="0.28408726979136706" green="0.70709127551798612" blue="0.90868842601776123" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="44" id="KAJ-pO-Q0l"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                <state key="normal" title="DONE">
+                                                    <color key="titleColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.90868842599999999" green="0.41336940480000001" blue="0.42702836529999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="VRO-MQ-T7S" firstAttribute="top" secondItem="Kip-om-2JE" secondAttribute="top" constant="20" id="AzL-HB-Umw"/>
+                                    <constraint firstAttribute="trailing" secondItem="VRO-MQ-T7S" secondAttribute="trailing" constant="20" id="CGc-ut-z24"/>
+                                    <constraint firstAttribute="bottom" secondItem="VRO-MQ-T7S" secondAttribute="bottom" constant="20" id="EYL-g0-eb2"/>
+                                    <constraint firstItem="VRO-MQ-T7S" firstAttribute="leading" secondItem="Kip-om-2JE" secondAttribute="leading" constant="20" id="p7v-hk-dZ4"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="Kip-om-2JE" firstAttribute="trailing" secondItem="tsw-oo-FVn" secondAttribute="trailing" constant="4" id="Q98-Hx-EyW"/>
+                            <constraint firstItem="tsw-oo-FVn" firstAttribute="leading" secondItem="Kip-om-2JE" secondAttribute="leading" constant="4" id="SDo-1i-78N"/>
+                            <constraint firstItem="Kip-om-2JE" firstAttribute="top" secondItem="tsw-oo-FVn" secondAttribute="top" constant="60" id="htk-un-V8K"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="tsw-oo-FVn"/>
+                    </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5cT-YY-l9F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2362" y="81"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="L85-f9-bbA">
