--- a/To-do List/To-do List/Views/TaskCell.xib
+++ b/To-do List/To-do List/Views/TaskCell.xib
@@ -12,32 +12,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaskCell" rowHeight="50" id="KGk-i7-Jjw" customClass="TaskCell" customModule="To_do_List" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="53"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="TaskCell" rowHeight="54" id="KGk-i7-Jjw" customClass="TaskCell" customModule="To_do_List" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="52.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="286" height="56.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pZx-RD-vpd">
-                        <rect key="frame" x="16" y="15.5" width="241" height="21.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XJE-vR-BBa">
-                        <rect key="frame" x="273" y="19" width="31" height="14.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.36005507935799785" green="0.35959823688882414" blue="0.36757813690000007" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="RSu-kz-kOe">
+                        <rect key="frame" x="16" y="10.5" width="254" height="36"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pZx-RD-vpd">
+                                <rect key="frame" x="0.0" y="0.0" width="254" height="20"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XJE-vR-BBa">
+                                <rect key="frame" x="0.0" y="20" width="254" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="r9P-Xo-fqb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.58247804519743551" green="0.58173898963715309" blue="0.59464844940000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="XJE-vR-BBa" firstAttribute="centerY" secondItem="pZx-RD-vpd" secondAttribute="centerY" id="35w-Yc-acx"/>
-                    <constraint firstItem="pZx-RD-vpd" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="3jh-w0-sfp"/>
-                    <constraint firstItem="pZx-RD-vpd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="4U5-il-f0S"/>
-                    <constraint firstItem="XJE-vR-BBa" firstAttribute="leading" secondItem="pZx-RD-vpd" secondAttribute="trailing" constant="16" id="C0b-ce-eFM"/>
-                    <constraint firstAttribute="trailing" secondItem="XJE-vR-BBa" secondAttribute="trailing" constant="16" id="Y5D-VC-vdX"/>
+                    <constraint firstItem="RSu-kz-kOe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10.5" id="193-nT-KDV"/>
+                    <constraint firstAttribute="trailing" secondItem="RSu-kz-kOe" secondAttribute="trailing" constant="16" id="9YX-K6-Tkg"/>
+                    <constraint firstItem="RSu-kz-kOe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="THs-Cu-Khh"/>
+                    <constraint firstItem="RSu-kz-kOe" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="aDf-DX-wHy"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -45,7 +52,7 @@
                 <outlet property="creationDateLabel" destination="XJE-vR-BBa" id="Q0m-VB-7zm"/>
                 <outlet property="titleLabel" destination="pZx-RD-vpd" id="ebG-uK-0Wd"/>
             </connections>
-            <point key="canvasLocation" x="34" y="58"/>
+            <point key="canvasLocation" x="34" y="59.5"/>
         </tableViewCell>
     </objects>
 </document>
